fixed text going out of bounds when scaling site

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@
 }
 .karta
 {
-    height: 40vh !important;
+    height: 90% !important;
 }
 .tekst
 {
